# biofoundation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  example.py  pyproject.toml
biofoundation/: __init__.py  data.py  inference.py  model.py
biofoundation/model/: base.py  scoring.py
biofoundation/model/adapters/: evo2.py  glm_experiments.py  gpn.py  hf.py
docker/evo2/: Dockerfile  Dockerfile.github  README.md  docker-compose.yml  run.sh
examples/: evo2_llr.py  glm_experiments_clm_traitgym_promoter.py  glm_experiments_mlm_traitgym_promoter.py  gpn_sat_mut_mpra_promoter.py  gpn_traitgym.py  gpn_traitgym_euclidean_distance.py  gpn_traitgym_promoter.py  hyenadna_evolutionary_constraint.py  marin_evolutionary_constraint.py  marin_llr.py  marin_traitgym_promoter.py  marin_traitgym_promoter_combined.py  marin_traitgym_promoter_euclidean_distance.py  plantcad_evolutionary_constraint.py  plantcad_llr.py  test_evo2.py
tests/: test_data.py  test_embedding_model.py  test_genome.py
