[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biofoundation"
version = "0.1.0"
description = "An ecosystem for users of biological foundation models"
requires-python = ">=3.8"
dependencies = [
    "datasets",
    "numpy",
    "pandas",
    "transformers[torch]",
]
